# mlx-vc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_request.yml
.github/workflows/: python-publish.yml  tests.yml
benchmarks/: bench_models.py
docs/: index.md  models.md
docs/contributing/: dev-setup.md
docs/en/: models.md
docs/en/contributing/: adding-a-model.md
docs/en/getting-started/: installation.md  quickstart.md
docs/en/guides/: evaluation.md  server.md
docs/en/models/: index.md  knn-vc.md  meanvc.md  openvoice.md
docs/getting-started/: quickstart.md
docs/guides/: discord.md  realtime.md
docs/models/: cosyvoice.md  index.md  rvc.md  seed-vc.md
docs/zh/: index.md  models.md
docs/zh/contributing/: adding-a-model.md  dev-setup.md
docs/zh/getting-started/: installation.md  quickstart.md
docs/zh/guides/: discord.md  evaluation.md  realtime.md  server.md
docs/zh/models/: cosyvoice.md  index.md  knn-vc.md  meanvc.md  openvoice.md  rvc.md  seed-vc.md
mlx_vc/: __init__.py  audio_io.py  backend.py  exceptions.py  generate.py  jobs.py  realtime.py  server.py  utils.py
mlx_vc/backends/: freevc_infer.py  knn_vc_infer.py  meanvc_infer.py  openvoice_infer.py  rvc_infer.py  seed_vc_infer.py  speecht5_infer.py  tts_clone_infer.py
mlx_vc/demo/: realtime_vc.py
mlx_vc/models/cosyvoice/: __init__.py  wrapper.py
mlx_vc/models/knn_vc/: __init__.py  model.py
mlx_vc/models/meanvc/: __init__.py  model.py
mlx_vc/models/openvoice/: __init__.py  model.py
mlx_vc/models/rvc/: __init__.py  model.py
mlx_vc/models/seed_vc/: __init__.py  _campplus.py  cfm.py  convert.py  dit.py  model.py  modules.py
mlx_vc/tests/: test_audio_io.py  test_backend.py  test_generate.py  test_imports.py  test_jobs.py  test_resolve_reference.py  test_server.py
scripts/: evaluate_quality.py  prepare_reference.py
